[metadata]
name = scrapy-tor-browser-selenium
version = 0.0.7
url = https://github.com/sakarimov/scrapy-tor-browser-selenium
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium and tor browser
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
